fixed pagination, scrollbar on table

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -41,6 +41,8 @@ span {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
 
   div {
     border: 0px solid #963;
